--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,16 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
 
 /* HOME SAYFASI İÇİN Home.js*/
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@500;800&family=Bebas+Neue&family=Satisfy&display=swap");
@@ -66,7 +64,7 @@ code {
   background-color: #fdc913;
   padding: 0.7em 2em;
   width: 12em;
-  margin-top: 0.5em;
+  margin: 0.5em;
 
   color: #292929;
 }
@@ -102,7 +100,7 @@ h1 {
   justify-content: space-between;
 }
 .star-style {
-  color:red
+  color: red;
 }
 
 .fiyat-style {
@@ -127,7 +125,7 @@ h1 {
   width: 100%;
   height: 3.5em;
   border-radius: 0.4em;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
 }
 
 .button-adet {
@@ -136,32 +134,26 @@ h1 {
   background-color: #fdc913;
   border-radius: 0.5em;
   border: none;
-  
-  
 }
 
 .button-adet-group {
   border-radius: 0.5em;
-  border: 1px solid  #D9D9D9;
+  border: 1px solid #d9d9d9;
   margin: 0;
   width: fit-content;
-
 }
-.input-adet{
+.input-adet {
   width: 2.5em;
   height: 3.5em;
   border: none;
   text-align: center;
-
-
 }
 
-.order-sum{
+.order-sum {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
   font-family: "Barlow", sanserif;
-
 }
 .div-group {
   display: flex;
@@ -173,21 +165,42 @@ h1 {
   color: #ce2829;
 }
 
-
 .sipariş-toplam {
   padding: 2em;
- width: 20em;
- height: 10em;
- border: 1px solid #D9D9D9 ;
- border-radius: 0.5em;
- flex-direction: column;
-
- 
+  width: 20em;
+  height: 10em;
+  border: 1px solid #d9d9d9;
+  border-radius: 0.5em;
+  flex-direction: column;
 }
 .siparis-ver-button {
   width: 100%;
   background-color: #fdc913;
   border: none;
   height: 3em;
-  display: f;
 }
+
+.success-div {
+  background-color: #ce2829; 
+  text-align: center;
+  width: 100%;
+  height: 54em;
+
+}
+.success {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  height: 90%;
+  justify-content: center;
+}
+.success-style {
+  color: white;
+  font-family: "barlow", sans-serif;
+  align-content: center;
+  font-size: 70px;
+  font-weight: lighter;
+  margin: 0;
+}
+
